# Notes

./: CMakeLists.txt  ExpandableNoteButton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.h  notebtn.cpp  task.pro
